--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/runtime": "^7.7.2",
-    "@storybook/addon-actions": "^6.5.11",
-    "@storybook/addon-essentials": "^6.5.11",
-    "@storybook/addon-links": "^6.5.11",
-    "@storybook/builder-webpack4": "^6.5.11",
-    "@storybook/manager-webpack4": "^6.5.11",
-    "@storybook/server": "^6.5.11",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack4": "^6.5.12",
+    "@storybook/manager-webpack4": "^6.5.12",
+    "@storybook/server": "^6.5.12",
     "babel-loader": "^8.0.6",
     "caniuse-lite": "^1.0.30001008",
+    "chokidar": "^3.5.3",
     "copy": "^0.3.2",
     "critical": "^1.3.7",
     "cross-env": "^6.0.3",
@@ -58,8 +59,11 @@
   },
   "dependencies": {
     "@dogstudio/highway": "^2.1.3",
+    "@storybook/addons": "^6.5.12",
+    "@storybook/channel-postmessage": "^6.5.12",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "2.3.0",
+    "cpy": "^8.0.0",
     "flickity": "^2.2.1",
     "flickity-imagesloaded": "^2.0.0",
     "gsap": "^3.6.0",
@@ -70,10 +74,13 @@
     "locomotive-scroll": "^3.6.1",
     "lodash.clamp": "^4.0.3",
     "lodash.debounce": "^4.0.8",
+    "lodash.merge": "^4.6.2",
     "lodash.throttle": "^4.1.1",
+    "rimraf": "^3.0.2",
     "sniffer": "watsondg/sniffer",
     "snyk": "^1.518.0",
-    "tiny-emitter": "^2.1.0"
+    "tiny-emitter": "^2.1.0",
+    "ws": "^8.8.1"
   },
   "snyk": true
 }
