--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,21 @@
 CRAFT_ENVIRONMENT=dev
-
-CRAFT_SECURITY_KEY=
+CRAFT_SECURITY_KEY=BLDFkt3GiQ6r5-uPO-_EeBgnMFTMZ-xW
 
 CRAFT_DB_DRIVER=pgsql
-CRAFT_DB_SERVER=localhost
+CRAFT_DB_SERVER=ddev-craft-storybook-db
 CRAFT_DB_PORT=5432
-CRAFT_DB_USER=postgres
-CRAFT_DB_PASSWORD=
-CRAFT_DB_DATABASE=
+CRAFT_DB_USER=db
+CRAFT_DB_PASSWORD=db
+CRAFT_DB_DATABASE=db
 CRAFT_DB_SCHEMA=public
 CRAFT_DB_TABLE_PREFIX=
 
-DEFAULT_SITE_URL=https://europa.nitro
+DEFAULT_SITE_URL=https://craft-storybook.ddev.site
 
-SMTP_HOST=mailhog.service.nitro
+SMTP_HOST=127.0.0.1
 SMTP_PORT=1025
 
 TWIGPACK_MANIFEST_PATH=http://host.docker.internal:8080/
 TWIGPACK_PUBLIC_PATH=http://host.docker.internal:8080/
+
+CRAFT_APP_ID=
